# File-explorer-CLI

./: .gitignore  README.md  pyproject.toml
fexplorer/: cli.py  explorer.py
